objects/Case.object
<CustomObject>
    <fields>
        <fullName>Queue_team__c</fullName>
        <formula>IF( Owner:Queue.DeveloperName = &apos;ADA_Compliance&apos; ||
Owner:Queue.DeveloperName = &apos;BBB_complaints_North_America&apos; ||
Owner:Queue.DeveloperName = &apos;CDC_Quality_Support_US&apos; ||
Owner:Queue.DeveloperName = &apos;CA_Consumer_affairs&apos; ||
Owner:Queue.DeveloperName = &apos;US_Consumer_affairs&apos; ||
Owner:Queue.DeveloperName = &apos;Delivery_Partner_NorthAmerica_UPS&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_ECommerce_Team_Northam&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_CS_Agents_NorthAmerica&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_Manager_Brand_Northam&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_CS_manager_Supplier_Northam&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_Local_IT_team_North_America&apos; ||
Owner:Queue.DeveloperName = &apos;Quality_Team_Northam&apos; ||
Owner:Queue.DeveloperName = &apos;Direct_Email_North_America&apos; ||
Owner:Queue.DeveloperName = &apos;Webform_Canada_EN&apos; ||
Owner:Queue.DeveloperName = &apos;Webform_Canada_FR&apos; ||
Owner:Queue.DeveloperName = &apos;Webform_US&apos;, &apos;NorthAmerica Team&apos;,

IF( Owner:Queue.DeveloperName = &apos;ABC_Rerouting_CDC_Salesforce_team&apos; ||
Owner:Queue.DeveloperName = &apos;ABC_France_PCD_Team_Salesforce_EU&apos; ||
Owner:Queue.DeveloperName = &apos;ABC_GB_PCD_Team_Salesforce_EU&apos; ||
Owner:Queue.DeveloperName = &apos;ABC_Germany_PCD_Team_Salesforce_EU&apos; ||
Owner:Queue.DeveloperName = &apos;Call_Back_Pieces_Exceptions&apos; ||
Owner:Queue.DeveloperName = &apos;CS_Internal_Contact_EU&apos; ||			
Owner:Queue.DeveloperName = &apos;Delivery_Partner_Europe&apos; ||
Owner:Queue.DeveloperName = &apos;GDPR_Queue&apos; ||
Owner:Queue.DeveloperName = &apos;High_end_BC&apos; ||
Owner:Queue.DeveloperName = &apos;Messenger_PCD_Team_Salesforce_EU&apos; ||
Owner:Queue.DeveloperName = &apos;Messenger_Rerouting_CDC_Salesforce_team&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_CS_Agents_EU&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_Customer_service_manager_Supplier&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_Quality_Local_Support_UK&apos; ||
Owner:Queue.DeveloperName = &apos;Queue_Cross_border_markets&apos; ||
Owner:Queue.DeveloperName = &apos;Direct_Email_Europe&apos; ||
Owner:Queue.DeveloperName = &apos;Email_Belgium_NL&apos; ||
Owner:Queue.DeveloperName = &apos;Email_Belgium&apos; ||
Owner:Queue.DeveloperName = &apos;Email_Switzerland&apos; ||
Owner:Queue.DeveloperName = &apos;Email_Germany&apos; ||
Owner:Queue.DeveloperName = &apos;Email_Spain&apos; ||
Owner:Queue.DeveloperName = &apos;Email_France&apos; ||
Owner:Queue.DeveloperName = &apos;Email_GB&apos; ||
Owner:Queue.DeveloperName = &apos;Email_International&apos; ||
Owner:Queue.DeveloperName = &apos;Email_Italy&apos; ||
Owner:Queue.DeveloperName = &apos;Email_NL&apos; ||
Owner:Queue.DeveloperName = &apos;Email_Russia&apos;, &apos;Europe Team&apos;,
	
IF( Owner:Queue.DeveloperName = &apos;Direct_Email_Japan&apos; ||
Owner:Queue.DeveloperName = &apos;Webforms_JP&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_CS_Agents_JP&apos; ||
Owner:Queue.DeveloperName = &apos;PCD_CS_Manager_Supplier_JP&apos;, &apos;Japan Team&apos;,
			&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Queue team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASMCodeFile__c</fullName>
        <label>ASM_CodeFile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Code_G__c</fullName>
        <formula>Product__r.SAP_Product_Code__c</formula>
        <label>Code G</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_issuer__c</fullName>
        <defaultValue>&quot;Consumer&quot;</defaultValue>
        <label>Case issuer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Retailer</fullName>
                </value>
                <value>
                    <fullName>POS Dior</fullName>
                </value>
                <value>
                    <fullName>PCD HQ</fullName>
                </value>
                <value>
                    <fullName>PCD Subsidiary</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InboundCall__c</fullName>
        <defaultValue>0</defaultValue>
        <label>InboundCall</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pay_By_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to track pay by call Ecommerce sales</description>
        <label>Pay By Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SendDateDUE__c</fullName>
        <description>Field set by process builder Case: DidYouEnjoy Survey in order to know if the DUE Survey needs to be send today or in 7 days (JIRA PCDCS-1105). Technical Field - Not in page layout</description>
        <label>SendDateDUE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Callback_Day__c</fullName>
        <label>Callback Day</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Compensation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial gesture</label>
        <referenceTo>Commercial_Gesture__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HighEnd_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HighEnd Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumJobTalend__c</fullName>
        <externalId>true</externalId>
        <label>NumJobTalend</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundCall__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OutboundCall</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_Involved__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS involved</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReallyClosed__c</fullName>
        <description>For Report Use</description>
        <formula>IF( AND(ISPICKVAL( Case_resolution__c , &quot;Case resolved&quot;), IsClosed ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed &amp; Resolved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Callback_Slot__c</fullName>
        <label>Callback Slot</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10h-12h</fullName>
                </value>
                <value>
                    <fullName>12h-14h</fullName>
                </value>
                <value>
                    <fullName>14h-16h</fullName>
                </value>
                <value>
                    <fullName>16h-18h</fullName>
                </value>
                <value>
                    <fullName>18h-20h</fullName>
                </value>
                <value>
                    <fullName>10-12</fullName>
                    <isActive>false</isActive>
                    <label>10-12</label>
                </value>
                <value>
                    <fullName>11h15 - 11h30</fullName>
                    <isActive>false</isActive>
                    <label>11h15 - 11h30</label>
                </value>
                <value>
                    <fullName>12h15 - 12h30</fullName>
                    <isActive>false</isActive>
                    <label>12h15 - 12h30</label>
                </value>
                <value>
                    <fullName>14-16</fullName>
                    <isActive>false</isActive>
                    <label>14-16</label>
                </value>
                <value>
                    <fullName>From 10am to 12pm</fullName>
                    <isActive>false</isActive>
                    <label>From 10am to 12pm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncomingEmail__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IncomingEmail</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Level__c</fullName>
        <formula>TEXT(Account.PersonContact.Loyalty_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loyalty Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutgoingEmail__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OutgoingEmail</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Date__c</fullName>
        <label>Purchase date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WebformLocale__c</fullName>
        <label>WebformLocale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3rd_Customer__c</fullName>
        <label>3rd Customer Contact - closure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCosmetoCase__c</fullName>
        <formula>ISPICKVAL( Type_2__c ,&apos;Cosmetic Vigilance&apos;)
/* COMPLETE THIS FORMULA : TRUE IF COSMETO CASE) °/
/*ISPICKVAL( Type_2__c ,&apos;Cosmetic Vigilance&apos;)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isCosmetoCase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncomingLetter__c</fullName>
        <formula>IF( ISPICKVAL( Origin ,&quot;Letter&quot;),1,0) +IF( ISBLANK( Date_of_Reception_1__c ),0,1) +IF( ISBLANK(  Reception_Date__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IncomingLetter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NbConversation__c</fullName>
        <formula>IF(ISBLANK(iAdvize__Conversation__c),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NbConversation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OutgoingLetter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OutgoingLetter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proven_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRCGSA-506</description>
        <label>Known Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reception_Date__c</fullName>
        <label>Date of Reception by Quality</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sensitive_Case__c</fullName>
        <description>https://lvmhpcis.jira.com/browse/PCDCS-1157</description>
        <formula>IF(
 Sensitive_case_checkbox__c = true, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FVNNP&quot;, &quot;Sensitive Case&quot;),
&quot;No&quot;
)</formula>
        <label>Sensitive Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_TimeStamp__c</fullName>
        <label>Agent TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Expert__c</fullName>
        <label>Assigned Expert</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Réclamations</fullName>
                </value>
                <value>
                    <fullName>Labo Microbio</fullName>
                </value>
                <value>
                    <fullName>Labo Parfums</fullName>
                </value>
                <value>
                    <fullName>Labo Physico Chimie</fullName>
                </value>
                <value>
                    <fullName>Labo Sensoriel</fullName>
                </value>
                <value>
                    <fullName>Labo Sous-traitance</fullName>
                </value>
                <value>
                    <fullName>AC/PF Maquillage</fullName>
                </value>
                <value>
                    <fullName>AC/PF Parfums</fullName>
                </value>
                <value>
                    <fullName>AC/PF Soin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>permet de lier un campaign member à un case, et de créer un case directement depuis la related list case sur le campaign member. Demandé dans le cadre de l&apos;implementation des campagnes clienteling CS</description>
        <label>Campaign Member</label>
        <referenceTo>CampaignMember__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Management__c</fullName>
        <label>Case management</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Defect known</fullName>
                    <label>Defect known - no return</label>
                </value>
                <value>
                    <fullName>Defect unknown</fullName>
                    <label>Defect unknown - return for analysis</label>
                </value>
                <value>
                    <fullName>Defect unknown urgent</fullName>
                    <label>Defect unknown urgent - return for analysis</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_resolution__c</fullName>
        <label>Case resolution</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case cannot be resolved</fullName>
                    <isActive>false</isActive>
                    <label>Case cannot be resolved</label>
                </value>
                <value>
                    <fullName>Case not resolved</fullName>
                </value>
                <value>
                    <fullName>Case resolved</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>No response from Customer</fullName>
                </value>
                <value>
                    <fullName>Social media archived</fullName>
                </value>
                <value>
                    <fullName>Spam</fullName>
                </value>
                <value>
                    <fullName>Transfer Dior Couture</fullName>
                </value>
                <value>
                    <fullName>Transfer to other countries</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conclusion_Date__c</fullName>
        <label>Conclusion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expert_Feedback__c</fullName>
        <label>Expert Feedback</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncomingWebform__c</fullName>
        <formula>IF(ISPICKVAL( Origin ,&quot;Email Contact Form&quot;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IncomingWebform</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_on_behalf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assisted Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF_Type_3_Modif__c</fullName>
        <label>WF_Type_3_Recla_Liv</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type_3_recla_livraison</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Analysis_Request__c</fullName>
        <label>Analysis Request 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateTimeForDebug__c</fullName>
        <label>DateTimeForDebug</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Franchise_search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Line Search</label>
        <referenceTo>Franchise__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_Pieces__c</fullName>
        <label>Number of pieces 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Product_Code__c</fullName>
        <formula>Product__r.SAP_Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Timestamp__c</fullName>
        <label>Status Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_closure_date__c</fullName>
        <label>Case closure date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Channel_Pictogram__c</fullName>
        <formula>CASE(Origin, &quot;Call&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjxAAC&quot;,&quot;Call&quot;),
CASE(Origin, &quot;Email&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjzAAC&quot;,&quot;Email&quot;),
CASE(Origin, &quot;Dior Couture&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjzAAC&quot;,&quot;Dior Couture&quot;),
CASE(Origin, &quot;Email Contact Form&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfjzAAC&quot;,&quot;Email Contact Form&quot;),
CASE(Origin, &quot;Live Chat&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk0AAC&quot;,&quot;Live Chat&quot;),
CASE(Origin, &quot;Facebook Messenger&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk0AAC&quot;,&quot;Facebook Messenger&quot;),
CASE(Origin, &quot;Facebook&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk0AAC&quot;,&quot;Facebook&quot;),
CASE(Origin, &quot;Apple Business Chat&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk0AAC&quot;,&quot;Apple Business Chat&quot;),
CASE(Origin, &quot;Business-chat&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk0AAC&quot;,&quot;Business-chat&quot;),
CASE(Origin, &quot;Instagram&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk0AAC&quot;,&quot;Instagram&quot;),
CASE(Origin, &quot;Letter&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000Mfk1AAC&quot;,&quot;Letter&quot;),
CASE(Origin, &quot;Survey&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0687Z000001Eclu&quot;,&quot;Survey&quot;),
CASE(Origin, &quot;Instant Advisory&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000008JC7B&quot;,&quot;Instant Advisory&quot;),



IMAGE(&quot;/sfc/servlet.shepherd/version/download/06809000000MfnSAAS&quot;,&quot;Inconnu&quot;))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Pictogram__c</fullName>
        <formula>CASE(Market__c,
&quot;FR&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWGBg&quot;,&quot;France&quot;),
&quot;IT&quot;, IMAGE($CustomMetadata.Flag__mdt.IT.URL__c,&quot;Italia&quot;),
&quot;ES&quot;, IMAGE($CustomMetadata.Flag__mdt.ES.URL__c,&quot;Spain&quot;),
&quot;RU&quot;, IMAGE($CustomMetadata.Flag__mdt.RU.URL__c,&quot;Russia&quot;),
&quot;PT&quot;, IMAGE($CustomMetadata.Flag__mdt.PT.URL__c,&quot;Portugal&quot;),
&quot;GB&quot;, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWGXO&quot;,&quot;United Kingdom&quot;),
&quot;NL&quot;, IMAGE($CustomMetadata.Flag__mdt.NL.URL__c,&quot;Netherlands&quot;),
&quot;BE&quot;, IMAGE($CustomMetadata.Flag__mdt.BE.URL__c,&quot;Belgium&quot;),
&quot;GR&quot;, IMAGE($CustomMetadata.Flag__mdt.GR.URL__c,&quot;Greece&quot;),
&quot;PL&quot;, IMAGE($CustomMetadata.Flag__mdt.PL.URL__c,&quot;Poland&quot;),
&quot;SE&quot;, IMAGE($CustomMetadata.Flag__mdt.SE.URL__c,&quot;Sweden&quot;),
&quot;CH&quot;, IMAGE($CustomMetadata.Flag__mdt.CH.URL__c,&quot;Switzerland&quot;),
&quot;RO&quot;, IMAGE($CustomMetadata.Flag__mdt.RO.URL__c,&quot;Romania&quot;),
&quot;IE&quot;, IMAGE($CustomMetadata.Flag__mdt.IE.URL__c,&quot;Ireland&quot;),
&quot;DK&quot;, IMAGE($CustomMetadata.Flag__mdt.DK.URL__c,&quot;Denmark&quot;),
&quot;AT&quot;, IMAGE($CustomMetadata.Flag__mdt.AT.URL__c,&quot;Austria&quot;),
&quot;DE&quot;, IMAGE($CustomMetadata.Flag__mdt.DE.URL__c,&quot;Germany&quot;),
&quot;FI&quot;, IMAGE($CustomMetadata.Flag__mdt.FI.URL__c,&quot;Finland&quot;),
&quot;LU&quot;, IMAGE($CustomMetadata.Flag__mdt.LU.URL__c,&quot;Luxembourg&quot;),
&quot;CA&quot;, IMAGE($CustomMetadata.Flag__mdt.CA.URL__c,&quot;Canada&quot;),
&quot;US&quot;, IMAGE($CustomMetadata.Flag__mdt.US.URL__c,&quot;USA&quot;),
&quot;BR&quot;, IMAGE($CustomMetadata.Flag__mdt.BR.URL__c,&quot;Brazil&quot;),
&quot;AE&quot;, IMAGE($CustomMetadata.Flag__mdt.EA.URL__c,&quot;United Arab Emirates&quot;),
&quot;CN&quot;, IMAGE($CustomMetadata.Flag__mdt.CN.URL__c,&quot;China&quot;),
&quot;HK&quot;, IMAGE($CustomMetadata.Flag__mdt.HK.URL__c,&quot;Hong Kong&quot;),
&quot;KR&quot;, IMAGE($CustomMetadata.Flag__mdt.KR.URL__c,&quot;South Korea&quot;),
&quot;JP&quot;, IMAGE($CustomMetadata.Flag__mdt.JP.URL__c,&quot;Japan&quot;),
&quot;SG&quot;, IMAGE($CustomMetadata.Flag__mdt.SG.URL__c,&quot;Singapore&quot;),
&quot;TW&quot;, IMAGE($CustomMetadata.Flag__mdt.TW.URL__c,&quot;Taiwan&quot;),
&quot;ID&quot;, IMAGE($CustomMetadata.Flag__mdt.ID.URL__c,&quot;Indonesia&quot;),
&quot;MY&quot;, IMAGE($CustomMetadata.Flag__mdt.MY.URL__c,&quot;Malaysia&quot;),
&quot;NO&quot;, IMAGE($CustomMetadata.Flag__mdt.NO.URL__c,&quot;Norway&quot;),
&quot;AU&quot;, IMAGE($CustomMetadata.Flag__mdt.AU.URL__c,&quot;Australia&quot;),
&quot;CZ&quot;, IMAGE($CustomMetadata.Flag__mdt.CZ.URL__c,&quot;Czech Republic&quot;),
&quot;HU&quot;, IMAGE($CustomMetadata.Flag__mdt.HU.URL__c,&quot;Hungary&quot;),
&quot;SK&quot;, IMAGE($CustomMetadata.Flag__mdt.SK.URL__c,&quot;Slovakia&quot;),
&quot;INT&quot;, IMAGE($CustomMetadata.Flag__mdt.INT.URL__c,&quot;International&quot;),
IMAGE($CustomMetadata.Flag__mdt.INC.URL__c,&quot;Inconnu&quot;)
)</formula>
        <label>Market Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criticality_Level__c</fullName>
        <label>Criticality Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mineur</fullName>
                </value>
                <value>
                    <fullName>Majeur</fullName>
                </value>
                <value>
                    <fullName>Critique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InteractionsTotal__c</fullName>
        <formula>InboundCall__c
 + NbAlcmeonConversation__c
+NbConversation__c + IncomingEmail__c+ IncomingLetter__c
+IncomingWebform__c
+OutboundCall__c
 + OutgoingEmail__c+ OutgoingLetter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Interactions Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LanguageDidUEnjoy__c</fullName>
        <formula>CASE( Language , &quot;nl_NL&quot;, &quot;nl&quot;, &quot;en_US&quot;, &quot;en&quot;,&quot;en_GB&quot;,&quot;en&quot;,&quot;zh_CN&quot;, &quot;zh&quot;,&quot;zh_TW&quot;,&quot;zht&quot;,&quot;pt_BR&quot;, &quot;pt&quot;,&quot;es_MX&quot;,&quot;es&quot;,TEXT(Language))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LanguageDidUEnjoy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code_Name__c</fullName>
        <description>Formula field displaying Product code + Name depending on the product selected in the lookup.</description>
        <formula>IF(ISBLANK(Product__r.SAP_Label_FR__c), Product__r.SAP_Label_EN__c, Product__r.SAP_Label_FR__c)</formula>
        <label>Product Code/Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refundable_Amount__c</fullName>
        <label>Refundable Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_sentiment__c</fullName>
        <defaultValue>&quot;Neutral&quot;</defaultValue>
        <label>Request sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neutral</fullName>
                    <default>true</default>
                    <label>⛅ Neutral</label>
                </value>
                <value>
                    <fullName>Enthusiast</fullName>
                    <label>&#127774; Enthusiast</label>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                    <label>☁️ Dissatisfied</label>
                </value>
                <value>
                    <fullName>Highly dissatisfied</fullName>
                    <label>⚡️ Highly dissatisfied</label>
                </value>
                <value>
                    <fullName>null</fullName>
                    <isActive>false</isActive>
                    <label>null</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thread_Id_Formula__c</fullName>
        <formula>&quot;ref:_&quot; 
&amp; LEFT($Organization.Id,5) 
&amp; SUBSTITUTE(RIGHT($Organization.Id,10), &quot;0&quot;, &quot;&quot; ) 
&amp; &quot;._&quot; 
&amp; LEFT(Id,5) 
&amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) 
&amp; RIGHT(Id,5) 
&amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread_Id_Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferCCAddress__c</fullName>
        <description>SRCGSA-658 - if filiale</description>
        <label>TransferCCAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferToAddress__c</fullName>
        <description>SRCGSA-658 - if filiale</description>
        <label>TransferToAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_Request_1__c</fullName>
        <label>Analysis Request 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Handling_date__c</fullName>
        <label>Case Handling date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Transfer_Date__c</fullName>
        <label>Transfer date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Transfered_To__c</fullName>
        <label>Case Transferred To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACCOUNTING - REFUND REQUEST</fullName>
                    <label>ACCOUNTING - REFUND REQUEST (EU)</label>
                </value>
                <value>
                    <fullName>AXPHARMA</fullName>
                    <label>AXPHARMA (EU)</label>
                </value>
                <value>
                    <fullName>DPD Europe Open a claim</fullName>
                </value>
                <value>
                    <fullName>DPD UK</fullName>
                    <label>DPD UK Open a claim (EU)</label>
                </value>
                <value>
                    <fullName>LEGAL DEPARTMENT</fullName>
                    <label>LEGAL DEPARTMENT (EU)</label>
                </value>
                <value>
                    <fullName>REGULATORY AFFAIRS DEPT.</fullName>
                    <label>REGULATORY AFFAIRS DEPT. (EU &amp; USA)</label>
                </value>
                <value>
                    <fullName>Warehouse SJDB</fullName>
                    <label>Warehouse SJDB (EU)</label>
                </value>
                <value>
                    <fullName>WAREHOUSE UK M90</fullName>
                </value>
                <value>
                    <fullName>CRM Manager Other Countries</fullName>
                    <label>CRM Manager Other Countries (EU)</label>
                </value>
                <value>
                    <fullName>CUSTOMER SERVICE Other Countries</fullName>
                </value>
                <value>
                    <fullName>HR DEPARTMENT USA</fullName>
                    <label>HR DEPARTMENT (USA)</label>
                </value>
                <value>
                    <fullName>LEGAL DEPARTMENT USA</fullName>
                    <label>LEGAL DEPARTMENT (USA)</label>
                </value>
                <value>
                    <fullName>VEGAS Boutique</fullName>
                    <label>VEGAS Boutique (USA)</label>
                </value>
                <value>
                    <fullName>LCS Finance Team (JP)</fullName>
                </value>
                <value>
                    <fullName>LCS RAQA Team (JP)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commercial_gesture__c</fullName>
        <label>Commercial gesture</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DayAtCurrentStatus__c</fullName>
        <formula>if(ISBLANK(Status_Timestamp__c),now()- LastModifiedDate , now()- Status_Timestamp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days at Current Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_follow_up__c</fullName>
        <inlineHelpText>Type your message to facilitate case handling</inlineHelpText>
        <label>Internal follow-up</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Of_Pieces_1__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Number of pieces</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outbound_call_flag__c</fullName>
        <formula>IF(
OutboundCall__c &gt;= 1, IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWFo6&quot;, &quot;Green tick&quot;),
IMAGE(&quot;/sfc/servlet.shepherd/version/download/0680900000FWFkw&quot;, &quot;Black bell&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outbound call flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packing_Lot_Number__c</fullName>
        <label>Packing Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Conclusion__c</fullName>
        <label>Quality Conclusion</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SendDUEDateIsToday__c</fullName>
        <description>Formula field to true if the send date of DUE is today or yesterday in order to be a criteria on the sending flow FL00018 : SendDidUEnjoy 11h35 to know when they need to send the survey (Jira PCDCS-1105) - Technical field not on page layout</description>
        <formula>IF ( 
				OR (SendDateDUE__c = TODAY(),  SendDateDUE__c =(TODAY()-1)),
				TRUE,
				FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SendDUEDateIsToday</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>